[ADD] : Documentation for routes
