# backend/routes/user.go
@@ -8,6 +8,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// RegisterUser godoc
+// @Summary Register a new user
+// @Description Register a new user
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Param user body models.User true "User object"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /user/register [post]
 func RegisterUser(c *gin.Context) {
 	userID, resp, statusCode := controllers.RegisterUser(c)
 	if statusCode == http.StatusInternalServerError {
@@ -22,11 +33,32 @@ func RegisterUser(c *gin.Context) {
 	c.JSON(statusCode, gin.H{"message": resp, "token": token})
 }
 
+// GetUser godoc
+// @Summary Get user information
+// @Description Get user information
+// @Tags user
+// @Produce  json
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /user [get]
+// @Security ApiKeyAuth
 func GetUser(c *gin.Context) {
 	jsonResp, statusCode := controllers.GetUser(c)
 	c.JSON(statusCode, jsonResp)
 }
 
+// LoginUser godoc
+// @Summary Login a user
+// @Description Login a user
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Param user body models.User true "User object"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /user/login [post]
 func LoginUser(c *gin.Context) {
 	userID, resp, statusCode := controllers.LoginUser(c)
 	if statusCode == http.StatusInternalServerError {
